Revision history for {{$dist->name}}

{{$NEXT}}
 - Add abstract to ::Row::JoinTable (Thanks Gregor Herrmann!)
   (Closes GH#49)

2.030001  2015-07-10 22:38:58-07:00 America/Los_Angeles
 - Make ::Schema::Verifier aggregate errors instead of dying on first one

2.030000  2015-07-01 10:11:42-07:00 America/Los_Angeles
 - Add ::Row::OnColumnMissing (Thanks ZipRecruiter!)

2.029000  2015-06-27 14:16:31-07:00 America/Los_Angeles
 - Add ::ResultSet::OneRow (Thanks Aran Deltac!)

2.028000  2015-05-30 17:06:01-05:00 America/Chicago
 - Add ::Verifier::RelationshipColumnName (Thanks for the idea mcsnolte!)
 - Add ::ResultSet::Shortcut::Search (Closes GH#44 and GH#47) (Thanks moltar!)

2.027001  2015-05-16 11:47:15-05:00 America/Chicago
 - Fix missing POD in ::ResultSet::Explain

2.027000  2015-05-08 19:35:13-05:00 America/Chicago
 - Add ::Verifier::Parent

2.026000  2015-05-02 00:27:28-05:00 America/Chicago
 - Add new ::Schema::Verifier framework
 - ... including inaugural ::Verifier::C3

2.025003  2015-04-06 16:28:20-05:00 America/Chicago
 - Make ::OnColumnChange always allow mutating values before update
 - Fix documented args for `after_column_change`
 - Document ::OnColumnChange semantics a little bit more clearly

2.025002  2015-03-21 00:03:43-05:00 America/Chicago
 - Migrate ::RS::CorelateRelationship to an importable Util
 - Correctly set a parent class for all helpers

2.025001  2015-02-28 09:53:36-06:00 America/Chicago
 - fix ::RS::Errors test on Windows

2.025000  2015-02-20 22:50:47-06:00 America/Chicago
 - Add ::Helper::ResultSet::Errors to help when calling Result methods on an RS

2.024001  2014-11-25 19:16:41-06:00 America/Chicago
 - Fix ::DidYouMean to override source instead of resultset (Thanks ribasushi
   for the bug report!)

2.024000  2014-11-02 09:02:44-06:00 America/Chicago
 - Add ::Helper::Schema::DidYouMean to help with typos when calling ->resultset

2.023007  2014-09-16 19:48:34-05:00 America/Chicago